--- a/views/post.ejs
+++ b/views/post.ejs
@@ -35,6 +35,7 @@
 
 <script src="/js/base.js"></script>
 <script src="/js/logout.js"></script>
+<script src="/js/responsiveNavbar.js"></script>
 <script src="/js/post.js"></script>
 </body>
 </html>
