--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,6 +30,7 @@
     </div>
 
 <script src="/js/base.js"></script>
+<script src="/js/responsiveNavbar.js"></script>
 <script src="/js/login.js"></script>
 <script src="/js/logout.js"></script>
 </body>
