--- a/views/my-posts.ejs
+++ b/views/my-posts.ejs
@@ -30,6 +30,7 @@
 
 
 <script src="/js/base.js"></script>
+<script src="/js/responsiveNavbar.js"></script>
 <script src="/js/logout.js"></script>
 <script src="/js/my-posts.js"></script>
 </body>
