--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -30,6 +30,7 @@
     </div>
 
 <script src="/js/base.js"></script>
+<script src="/js/responsiveNavbar.js"></script>
 <script src="/js/signup.js"></script>
 </body>
 </html>
