--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav>
     <div class="logo-container">
-        <h3>JokeSuno.com</h3>
+        <h3><a href="/">JokeSuno.com</a></h3>
     </div>
 
     <ul class="menu">
